--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@
 }
 
 .calculator form input{
-    /* border: 0; */
-    outline: 0;
+    border:1px solid black;
     width: 60px;
     height: 60px;
     border-radius: 10px;
